Shira/force-app/main/default/objects/Contact/fields/aboard__c.field-meta.xml
<CustomField>
    <fullName>aboard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>לקוח זר</label>
    <type>Checkbox</type>
</CustomField>