Shira/force-app/main/default/objects/Contact/fields/Areas__c.field-meta.xml
<CustomField>
    <fullName>Areas__c</fullName>
    <label>תחום</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>מערכות הנעה ודלק</fullName>
            </value>
            <value>
                <fullName>מערכות מכניות של כלי טיס</fullName>
            </value>
            <value>
                <fullName>עומסים פרפור וחוזק</fullName>
            </value>
            <value>
                <fullName>בטיחות מבצעית נמשכת של כלי טיס</fullName>
            </value>
            <value>
                <fullName>מערכות מכניות</fullName>
            </value>
            <value>
                <fullName>בטיחות תא נוסעים ומטען</fullName>
            </value>
            <value>
                <fullName>מערכות אוויוניקה</fullName>
            </value>
            <value>
                <fullName>תוכנה</fullName>
            </value>
            <value>
                <fullName>חומרה</fullName>
            </value>
            <value>
                <fullName>מערכות חשמל ואוויוניקה</fullName>
            </value>
            <value>
                <fullName>מערכי כטב&quot;מ אזרחיים</fullName>
            </value>
            <value>
                <fullName>מחקרי תעופה</fullName>
            </value>
            <value>
                <fullName>טייס ניסוי</fullName>
            </value>
            <value>
                <fullName>ניסויי ומדעי הטיסה</fullName>
            </value>
            <value>
                <fullName>בקרת טיסה פיתוח וניסויים</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>