Shira/force-app/main/default/objects/Contact/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>מחלקה</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ייצור</fullName>
            </value>
            <value>
                <fullName>הנדסה א&apos;</fullName>
            </value>
            <value>
                <fullName>הנדסה ב&apos;</fullName>
            </value>
            <value>
                <fullName>ניסויים</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>