Shira/force-app/main/default/objects/Contact/fields/FirsName__c.field-meta.xml
<CustomField>
    <fullName>FirsName__c</fullName>
    <label>שם פרטי</label>
    <length>100</length>
    <type>Text</type>
</CustomField>