Shira/force-app/main/default/objects/Contact/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <label>תז</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>