Shira/force-app/main/default/objects/Contact/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>תפקיד</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>נציג רישוי</fullName>
            </value>
            <value>
                <fullName>מנהל פרויקט</fullName>
            </value>
            <value>
                <fullName>מנהל תחום</fullName>
            </value>
            <value>
                <fullName>DER</fullName>
            </value>
            <value>
                <fullName>DMIR</fullName>
            </value>
            <value>
                <fullName>מנהל מחלקה</fullName>
            </value>
            <value>
                <fullName>מהנדס ראשי</fullName>
            </value>
            <value>
                <fullName>רכזת אגף</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>